Added fucntionality to buttons and submit form for names

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 </head>
 <body>
    <h1>Chrismess - A whole mess o' Chrisses</h1>
+   <h2 class="delight"> Life is awesome with code</h2>
+   <h3> Why the hell is javascript the only language allowed to be a browser language? Why not Python, or C?</h3>h
+
+   <button>Change heading</button>
+
+
+   <form>
+      first name: <br>
+      <input type="text" name="firstname"><br>
+      last name:<br>
+      <input type="text" name="whatever">
+    
+
+   </form>
+
+  
 
   <script src="index.js"></script>
 </body>
