--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+   body {background-color: powderblue;}
+   @import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Roboto');
+  </style>	
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Chrismess - A whole mess o' Chrisses</title>
